fix: added collection image and map to the same container to perfectly align them

--- a/src/pages/Profile/Collection.css
+++ b/src/pages/Profile/Collection.css
@@ -32,12 +32,15 @@
   box-sizing: border-box; 
 }
 
+.mapImageContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;  
+}
+
 .observationImage {
-  max-width: 95%;
-  height: auto;
-  display: block;
-  margin: 20px auto;
-  margin-right: 20px;
+  width: 85%;
+  height: auto;  
 }
 
 .cardContainer {
